[package]
name = "payu-india"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/itsbalamurali/payu-india-rs"

[dependencies]
reqwest = "0.11.13"
reqwest-middleware = "0.2.0"
sha2 = "0.10"
anyhow = "1.0.67"
serde = { version="1",features = ["derive"]}
