[package]
name = "payu-india"
description = "PayU India API Rust SDK."
readme = "README.md"
version = "0.0.2"
edition = "2021"
license-file = "LICENSE"
authors = ["Balamurali Pandranki"]
repository = "https://github.com/itsbalamurali/payu-india-rs"

[dependencies]
reqwest = "0.11.13"
reqwest-middleware = "0.2.5"
ring = "0.17.0-alpha.11"
anyhow = "1.0.67"
serde = { version="1",features = ["derive"]}
serde_json = "1"
